Add score screen, add reset

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         text-align:center;
       }
 
-      button {
+      .panel--button {
           width: 100%;
           background-color: #4273F4;
           border: 0;
