--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
       .panel--title {
         font-weight: bold;
+        padding: 15px;
         margin-top: 20px;
         text-align:center;
       }
@@ -66,6 +67,10 @@
           color: white;
           font-size: 1.06em;
           padding: 25px 0;
+      }
+
+      .answer {
+        margin: 5px 0;
       }
     </style>
   </head>
